--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
-
-.wrapper {
-    width: 960px;
-    height: 100px;
-    padding: 20px;
+div.gallery {
+    margin: 5px;
+    float: left;
+    width: 500px;
+    align-content: center;
+    display: block;
 }
 
-h1 {
-    font-family: ;
-    font-size: ;
-    color: ;
-}
-
-h2{
+div.gallery:hover {
+    -webkit-box-shadow: 0px 0px 34px -15px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 34px -15px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 34px -15px rgba(0,0,0,0.75);
 
 }
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+    align-content: center;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+ .title {
+    color: rgba(175, 97, 52, 0.459);
+    text-align: center;
+  }
 
 
