--- a/aboutus.css
+++ b/aboutus.css
@@ -24,3 +24,9 @@ h1 {
     background-color: #ddd;
     color: black;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
